--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -6,7 +6,7 @@ metadata:
     pipelinesascode.tekton.dev/on-event: pull_request
     pipelinesascode.tekton.dev/on-target-branch: main
     pipelinesascode.tekton.dev/task: git-clone
-    pipelinesascode.tekton.dev/task-1: pylint
+    # pipelinesascode.tekton.dev/task-1: pylint
   name: pipelinerun-python
 spec:
   params:
@@ -40,6 +40,11 @@ spec:
       workspaces:
       - name: source
         workspace: source
+      params:
+      - name: args
+        value: ["-r", "y"]
+      - name: path
+        value: "./"
     workspaces:
     - name: source
     - name: basic-auth
