--- a/.tekton/pipelinerun.yaml
+++ b/.tekton/pipelinerun.yaml
@@ -1,79 +1,30 @@
+---
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
+  name: ci-gitops-pipeline-run
   annotations:
-    pipelinesascode.tekton.dev/max-keep-runs: "5"
     pipelinesascode.tekton.dev/on-event: pull_request
     pipelinesascode.tekton.dev/on-target-branch: main
-    pipelinesascode.tekton.dev/task: git-clone
-    # pipelinesascode.tekton.dev/task-1: pylint
-  name: pipelinerun-python
 spec:
+  pipelineRef:
+    name: ci-gitops-pipeline
   params:
-  - name: repo_url
-    value: https://github.com/bscp7/python-webapp.git
-  - name: revision
-    value: main
-  pipelineSpec:
-    params:
-    - name: repo_url
-    - name: revision
-    tasks:
-    - name: fetch-repository
-      params:
-      - name: url
-        value: $(params.repo_url)
-      - name: revision
-        value: $(params.revision)
-      taskRef:
-        name: git-clone
-      workspaces:
-      - name: output
-        workspace: source
-      - name: basic-auth
-        workspace: basic-auth
-    - name: pylint
-      runAfter:
-      - fetch-repository
-      taskRef:
-        name: pylint
-      workspaces:
-      - name: source
-        workspace: source
-      params:
-      - name: args
-        value: ["-r", "y"]
-      - name: path
-        value: "./"
-    - name: update-kustomize-image-run
-      runAfter:
-      - pylint
-      taskRef:
-        name: update-kustomize-image
-      params:
-        - name: gitops-repo-url
-          value: https://github.com/bscp7/python-webapp.git
-        - name: image
-          value: docker.io/bhaveshscp/python-image:latest
-        - name: app-name
-          value: mywebapp
-        - name: branch
-          value: main
-      workspaces:
-      - name: source
-        workspace: source
-    workspaces:
-    - name: source
-    - name: basic-auth
+    - name: repo-url
+      value: https://github.com/bscp7/python-webapp.git
+    - name: image-url
+      value: docker.io/bhaveshscp/python-image:latest
+    - name: gitops-repo-url
+      value: https://github.com/bscp7/python-webapp.git
+    - name: app-name
+      value: mywebapp
+    - name: gitops-branch
+      value: main
   workspaces:
-  - name: source
-    volumeClaimTemplate:
-      spec:
-        accessModes:
-        - ReadWriteOnce
-        resources:
-          requests:
-            storage: 1Gi
-  - name: basic-auth
-    secret:
-      secretName: github-auth-secret
+    - name: shared-workspace
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 1Gi
