--- a/apps/manifests/overlays/prod/kustomization.yaml
+++ b/apps/manifests/overlays/prod/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - deploy.yaml
+  - ../../base
 images:
   - name: python-image
     newName: docker.io/bhaveshscp/python-image
